# LsoSiJi

./: .gitattributes  .gitignore  LaoSiJi.jks  README.md  build.gradle  config.gradle  freeline_project_description.json  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  signing.properties
app/schemas/com.zmy.laosiji.room.TestDataBase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/skins/: night.skin
app/src/main/cpp/: native-lib.cpp  test-lib.cpp
app/src/main/res/anim/: app_quit_out.xml
app/src/main/res/drawable/: background_splash.xml  conner_item_image.xml  shape_common_toast.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_aac.xml  activity_aidl.xml  activity_base.xml  activity_bycler_view.xml  activity_custom_view.xml  activity_jni.xml  activity_loading.xml  activity_main.xml  activity_meizhi_item.xml  activity_menu.xml  activity_music.xml  activity_permission.xml  activity_scroll.xml  activity_socket.xml  activity_theme_night.xml  activity_transition.xml  activity_transition_to.xml  activity_translate.xml  activity_work_space.xml  activity_xuan_fu.xml  app_bar_work_space.xml  common_toast.xml  content_main.xml  content_work_space.xml  dialog_click.xml  dialog_evaluate.xml  fragment_base_custom.xml  fragment_ciecle_duihao.xml  fragment_guaguale.xml  fragment_sunlight.xml  item_meizhi.xml  item_vlayout1.xml  item_work_grid.xml  item_zhihu.xml
app/src/main/res/menu/: activity_work_space_drawer.xml  menu_main.xml  work_space.xml
app/src/main/res/transition/: spalshactivity_open.xml  (+1 more)
(+279 files in other folders)
